--- a/.github/workflows/sanitize.yaml
+++ b/.github/workflows/sanitize.yaml
@@ -15,7 +15,7 @@ jobs:
   build_dependencies:
     name: Build deps [ubuntu]
     runs-on: ubuntu-latest
-    if: github.event.review.state == 'APPROVED'
+    # if: github.event.review.state == 'APPROVED'
     steps:
       - uses: actions/checkout@v4
       - name: Get dependencies hash
