--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -121,7 +121,7 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            -n logical -v
+            -n logical -v --bmq_keep_logs
 
       - name: Upload failure-logs as artifacts
         # if: failure()
@@ -212,7 +212,7 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            -n logical -v
+            -n logical -v --bmq_keep_logs
 
       - name: Upload failure-logs as artifacts
         # if: failure()
