--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -117,7 +117,8 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            -n logical -v --bmq_keep_logs
+            --bmq_keep_logs                     \
+            -n logical -v
 
       - name: Upload failure-logs as artifacts
         # if: failure()
@@ -208,7 +209,8 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            -n logical -v --bmq_keep_logs
+            --bmq_keep_logs                     \
+            -n logical -v
 
       - name: Upload failure-logs as artifacts
         # if: failure()
