--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -117,7 +117,7 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            --bmq_keep_logs                     \
+            --bmq-keep-logs                     \
             -n logical -v
 
       - name: Upload failure-logs as artifacts
@@ -209,7 +209,7 @@ jobs:
             --junitxml=integration-tests.xml    \
             --tb long                           \
             --reruns=3                          \
-            --bmq_keep_logs                     \
+            --bmq-keep-logs                     \
             -n logical -v
 
       - name: Upload failure-logs as artifacts
