--- a/.github/workflows/sanitize.yaml
+++ b/.github/workflows/sanitize.yaml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         mode: ["asan", "msan", "tsan", "ubsan"]
-      # fail-fast: false
+      fail-fast: false
     runs-on: ubuntu-24.04
     # if: github.event.review.state == 'APPROVED'
     steps:
