--- a/docker/sanitizers/Dockerfile
+++ b/docker/sanitizers/Dockerfile
@@ -20,6 +20,5 @@ COPY CMakeLists.txt ./
 RUN docker/sanitizers/build_sanitizer.sh ${SANITIZER_NAME}
 
 # Run unit tests
-# CMD [ "/blazingmq/cmake.bld/Linux/run-unittests.sh" ]
-CMD [ "/blazingmq/cmake.bld/Linux/run-it.sh" ]
-
+CMD [ "/blazingmq/cmake.bld/Linux/run-unittests.sh" ]
+# CMD [ "/blazingmq/cmake.bld/Linux/run-it.sh" ]
