Run only breathing ITs and also in parallel mode
Signed-off-by: Dmitrii Petukhov <dpetukhov@bloomberg.net>

--- a/.github/workflows/sanitize.yaml
+++ b/.github/workflows/sanitize.yaml
@@ -42,4 +42,4 @@ jobs:
       # - name: UT [c++,${{ matrix.mode }}]
       #   run: docker run --rm sanitizer-${{ matrix.mode }}
       - name: IT [c++,${{ matrix.mode }}]
-        run: docker run --rm sanitizer-${{ matrix.mode }} /blazingmq/cmake.bld/Linux/run-it.sh
+        run: docker run --rm sanitizer-${{ matrix.mode }} /blazingmq/cmake.bld/Linux/run-it.sh -n auto -k breathing
