--- a/.github/workflows/sanitize.yaml
+++ b/.github/workflows/sanitize.yaml
@@ -1,6 +1,9 @@
 name: Sanitize
 
 on:
+  push:
+    branches:
+      - san
   pull_request_review:
     types: [submitted]
 
@@ -20,7 +23,7 @@ jobs:
             fuzz: "on"
       fail-fast: false
     runs-on: ubuntu-24.04
-    if: github.event.review.state == 'APPROVED'
+    # if: github.event.review.state == 'APPROVED'
     steps:
       - uses: actions/checkout@v4
       - name : Purge runner
