--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -155,6 +155,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           # The ref of the workflow that triggered this workflow
+          ref: ${{ github.event.inputs.ref1 }}
           path: repoit
           fetch-depth: 0
 
