--- a/.github/workflows/dependencies.yaml
+++ b/.github/workflows/dependencies.yaml
@@ -53,6 +53,7 @@ jobs:
             libfl-dev \
             libbenchmark-dev \
             libgmock-dev \
+            libzstd-dev \
             libz-dev
 
       - name: Fetch & build non packaged dependencies
